# lib/api-spec/openapi.yaml
@@ -1436,9 +1436,21 @@ components:
           type: string
         tagline:
           type: string
+        heroBadgeText:
+          type: string
         heroHeading:
           type: string
         heroSubheading:
+          type: string
+        heroImageUrl:
+          type: string
+        heroCtaPrimaryText:
+          type: string
+        heroCtaPrimaryLink:
+          type: string
+        heroCtaSecondaryText:
+          type: string
+        heroCtaSecondaryLink:
           type: string
         email:
           type: string
@@ -1455,6 +1467,34 @@ components:
         facebookUrl:
           type: string
         twitterUrl:
+          type: string
+        seoHomeTitle:
+          type: string
+        seoHomeDescription:
+          type: string
+        seoPeopleTitle:
+          type: string
+        seoPeopleDescription:
+          type: string
+        seoServicesTitle:
+          type: string
+        seoServicesDescription:
+          type: string
+        seoInsightsTitle:
+          type: string
+        seoInsightsDescription:
+          type: string
+        seoCalculatorTitle:
+          type: string
+        seoCalculatorDescription:
+          type: string
+        seoCareersTitle:
+          type: string
+        seoCareersDescription:
+          type: string
+        seoContactTitle:
+          type: string
+        seoContactDescription:
           type: string
         updatedAt:
           type: string
@@ -1467,9 +1507,21 @@ components:
           type: string
         tagline:
           type: string
+        heroBadgeText:
+          type: string
         heroHeading:
           type: string
         heroSubheading:
+          type: string
+        heroImageUrl:
+          type: string
+        heroCtaPrimaryText:
+          type: string
+        heroCtaPrimaryLink:
+          type: string
+        heroCtaSecondaryText:
+          type: string
+        heroCtaSecondaryLink:
           type: string
         email:
           type: string
@@ -1486,6 +1538,34 @@ components:
         facebookUrl:
           type: string
         twitterUrl:
+          type: string
+        seoHomeTitle:
+          type: string
+        seoHomeDescription:
+          type: string
+        seoPeopleTitle:
+          type: string
+        seoPeopleDescription:
+          type: string
+        seoServicesTitle:
+          type: string
+        seoServicesDescription:
+          type: string
+        seoInsightsTitle:
+          type: string
+        seoInsightsDescription:
+          type: string
+        seoCalculatorTitle:
+          type: string
+        seoCalculatorDescription:
+          type: string
+        seoCareersTitle:
+          type: string
+        seoCareersDescription:
+          type: string
+        seoContactTitle:
+          type: string
+        seoContactDescription:
           type: string
 
     Service:
